# run-coach

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  Makefile  PLAN_phase4.5_workout_splits.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: CLAUDE.md  settings.json
alembic/: env.py
config/: profile.example.yaml  settings.example.yaml  settings.yaml
docs/: phase1-mvp.md  phase1.5-datasources.md  phase2-data-logging.md  phase2-self-check.md  phase3-langgraph.md  phase3-rag.md  phase3.5-calendar-sync.md  phase4-data-logging.md  phase4-langgraph.md  phase4-line.md  phase4.5-workout-splits.md  phase5-cloud-run.md  phase5-postgres.md  phase5-production.md  phase5-rag.md  phase5.1-upsert.md  phase6-cloud-run.md  phase6-data-logging.md  phase6.1-docker-local.md  phase6.2-cloud-run-deploy.md  phase6.3-cloud-scheduler.md  phase6.4-terraform.md  phase7-line.md  phase7-rag.md
run_coach/: __main__.py  api.py  auth.py  calendar.py  cloud.py  config.py  converters.py  database.py  feedback_parser.py  formatter.py  garmin.py  gcs.py  graph.py  line.py  look_back.py  models.py  plan_review.py  planner.py  prompt.py  state.py  weather.py  workout_store.py
scripts/: launchd_upload_garmin_tokens.sh  review-hook.sh  review-prompt.txt  upload_garmin_tokens.py
tests/: conftest.py  test_api.py  test_auth.py  test_calendar.py  test_calendar_cloud.py  test_calendar_sync.py  test_check_new_activity.py  test_cloud.py  test_database.py  test_feedback_parser.py  test_garmin.py  test_gcs.py  test_graph.py  test_line.py  test_line_webhook.py  test_look_back.py  test_planner.py  (+6 more)
(+14 files in other folders)
